--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <footer>
             <p>© 2023 心理拼图 | PsyPuzzle. 保留所有权利。</p>
             <p>
-                <a href="https://beian.miit.gov.cn" target="_blank" class="beian">京ICP备XXXXXXX号</a>
+                <a href="https://beian.miit.gov.cn" target="_blank" class="beian">蜀ICP备2025128458号-1</a>
                 | 本网站仅供学习交流使用
             </p>
             <p style="font-size: 0.8em; color: #999; margin-top: 10px;">
